sit-core/src/duktape/bindings.rs

#[test]
fn bindgen_test_layout_duk_time_components() {
    assert_eq!(::std::mem::size_of::<duk_time_components>() , 64usize , concat
               ! ( "Size of: " , stringify ! ( duk_time_components ) ));
    assert_eq! (::std::mem::align_of::<duk_time_components>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( duk_time_components ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_time_components ) ) . year as * const
                _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_time_components ) ,
                "::" , stringify ! ( year ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_time_components ) ) . month as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_time_components ) ,
                "::" , stringify ! ( month ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_time_components ) ) . day as * const
                _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_time_components ) ,
                "::" , stringify ! ( day ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_time_components ) ) . hours as *
                const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_time_components ) ,
                "::" , stringify ! ( hours ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_time_components ) ) . minutes as *
                const _ as usize } , 32usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_time_components ) ,
                "::" , stringify ! ( minutes ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_time_components ) ) . seconds as *
                const _ as usize } , 40usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_time_components ) ,
                "::" , stringify ! ( seconds ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_time_components ) ) . milliseconds as
                * const _ as usize } , 48usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_time_components ) ,
                "::" , stringify ! ( milliseconds ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const duk_time_components ) ) . weekday as *
                const _ as usize } , 56usize , concat ! (
                "Alignment of field: " , stringify ! ( duk_time_components ) ,
                "::" , stringify ! ( weekday ) ));
}
impl Clone for duk_time_components {
    fn clone(&self) -> Self { *self }
}
pub type duk_c_function =
    ::std::option::Option<unsafe extern "C" fn(ctx: *mut duk_context)
                              -> duk_ret_t>;
pub type duk_alloc_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void,
                                               size: duk_size_t)
                              -> *mut ::std::os::raw::c_void>;
pub type duk_realloc_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void,
                                               ptr:
                                                   *mut ::std::os::raw::c_void,
                                               size: duk_size_t)
                              -> *mut ::std::os::raw::c_void>;
pub type duk_free_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void,
                                               ptr:
                                                   *mut ::std::os::raw::c_void)>;
pub type duk_fatal_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void,
                                               msg:
                                                   *const ::std::os::raw::c_char)>;
pub type duk_decode_char_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void,
                                               codepoint: duk_codepoint_t)>;
pub type duk_map_char_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void,
                                               codepoint: duk_codepoint_t)
                              -> duk_codepoint_t>;
pub type duk_safe_call_function =
    ::std::option::Option<unsafe extern "C" fn(ctx: *mut duk_context,
                                               udata:
                                                   *mut ::std::os::raw::c_void)
                              -> duk_ret_t>;
pub type duk_debug_read_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void,
                                               buffer:
                                                   *mut ::std::os::raw::c_char,
                                               length: duk_size_t)
                              -> duk_size_t>;
pub type duk_debug_write_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void,
                                               buffer:
                                                   *const ::std::os::raw::c_char,
                                               length: duk_size_t)
                              -> duk_size_t>;
pub type duk_debug_peek_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void)
                              -> duk_size_t>;
pub type duk_debug_read_flush_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void)>;
pub type duk_debug_write_flush_function =
    ::std::option::Option<unsafe extern "C" fn(udata:
                                                   *mut ::std::os::raw::c_void)>;
pub type duk_debug_request_function =
    ::std::option::Option<unsafe extern "C" fn(ctx: *mut duk_context,
                                               udata:
                                                   *mut ::std::os::raw::c_void,
                                               nvalues: duk_idx_t)
                              -> duk_idx_t>;
pub type duk_debug_detached_function =
    ::std::option::Option<unsafe extern "C" fn(ctx: *mut duk_context,
                                               udata:
                                                   *mut ::std::os::raw::c_void)>;
extern "C" {
    pub fn duk_create_heap(alloc_func: duk_alloc_function,
                           realloc_func: duk_realloc_function,
                           free_func: duk_free_function,
                           heap_udata: *mut ::std::os::raw::c_void,
                           fatal_handler: duk_fatal_function)
     -> *mut duk_context;
}
extern "C" {
    pub fn duk_destroy_heap(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_suspend(ctx: *mut duk_context, state: *mut duk_thread_state);
}
extern "C" {
    pub fn duk_resume(ctx: *mut duk_context, state: *const duk_thread_state);
}
extern "C" {
    pub fn duk_alloc_raw(ctx: *mut duk_context, size: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_free_raw(ctx: *mut duk_context,
                        ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn duk_realloc_raw(ctx: *mut duk_context,
                           ptr: *mut ::std::os::raw::c_void, size: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_alloc(ctx: *mut duk_context, size: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_free(ctx: *mut duk_context, ptr: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn duk_realloc(ctx: *mut duk_context,
                       ptr: *mut ::std::os::raw::c_void, size: duk_size_t)
     -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn duk_get_memory_functions(ctx: *mut duk_context,
                                    out_funcs: *mut duk_memory_functions);
}
extern "C" {
    pub fn duk_gc(ctx: *mut duk_context, flags: duk_uint_t);
}
extern "C" {
    pub fn duk_throw_raw(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_fatal_raw(ctx: *mut duk_context,
                         err_msg: *const ::std::os::raw::c_char);
}
extern "C" {
    pub fn duk_error_raw(ctx: *mut duk_context, err_code: duk_errcode_t,
                         filename: *const ::std::os::raw::c_char,
                         line: duk_int_t,
                         fmt: *const ::std::os::raw::c_char, ...);
}
extern "C" {
    pub fn duk_error_va_raw(ctx: *mut duk_context, err_code: duk_errcode_t,
                            filename: *const ::std::os::raw::c_char,
                            line: duk_int_t,
                            fmt: *const ::std::os::raw::c_char,
                            ap: *mut __va_list_tag);
}
extern "C" {
    pub fn duk_is_strict_call(ctx: *mut duk_context) -> duk_bool_t;
}
extern "C" {
    pub fn duk_is_constructor_call(ctx: *mut duk_context) -> duk_bool_t;
}
extern "C" {
    pub fn duk_normalize_index(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_idx_t;
}
extern "C" {
    pub fn duk_require_normalize_index(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_idx_t;
}
extern "C" {
    pub fn duk_is_valid_index(ctx: *mut duk_context, idx: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_require_valid_index(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_get_top(ctx: *mut duk_context) -> duk_idx_t;
}
extern "C" {
    pub fn duk_set_top(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_get_top_index(ctx: *mut duk_context) -> duk_idx_t;
}
extern "C" {
    pub fn duk_require_top_index(ctx: *mut duk_context) -> duk_idx_t;
}
extern "C" {
    pub fn duk_check_stack(ctx: *mut duk_context, extra: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_require_stack(ctx: *mut duk_context, extra: duk_idx_t);
}
extern "C" {
    pub fn duk_check_stack_top(ctx: *mut duk_context, top: duk_idx_t)
     -> duk_bool_t;
}
extern "C" {
    pub fn duk_require_stack_top(ctx: *mut duk_context, top: duk_idx_t);
}
extern "C" {
    pub fn duk_swap(ctx: *mut duk_context, idx1: duk_idx_t, idx2: duk_idx_t);
}
extern "C" {
    pub fn duk_swap_top(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_dup(ctx: *mut duk_context, from_idx: duk_idx_t);
}
extern "C" {
    pub fn duk_dup_top(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_insert(ctx: *mut duk_context, to_idx: duk_idx_t);
}
extern "C" {
    pub fn duk_replace(ctx: *mut duk_context, to_idx: duk_idx_t);
}
extern "C" {
    pub fn duk_copy(ctx: *mut duk_context, from_idx: duk_idx_t,
                    to_idx: duk_idx_t);
}
extern "C" {
    pub fn duk_remove(ctx: *mut duk_context, idx: duk_idx_t);
}
extern "C" {
    pub fn duk_xcopymove_raw(to_ctx: *mut duk_context,
                             from_ctx: *mut duk_context, count: duk_idx_t,
                             is_copy: duk_bool_t);
}
extern "C" {
    pub fn duk_push_undefined(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_null(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_boolean(ctx: *mut duk_context, val: duk_bool_t);
}
extern "C" {
    pub fn duk_push_true(ctx: *mut duk_context);
}
extern "C" {
    pub fn duk_push_false(ctx: *mut duk_context);
}
